# restaurant-application

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 4c99d1826123_created_category_and_product_tables.py  58048d3d2d79_added_order_address_relationship_on_.py  5b30e44af13c_updated_cascade_on_user_adress_.py  7ec329e50737_created_user_table.py  83e443de94ec_created_address_table.py  8c82502eecf6_created_order_and_order_item_tables.py  bb5652422430_added_product_price_field_to_order_item_.py  db927e2f63ab_updated_cascade_on_order_orderitem_.py  fc4f42acbba9_created_employee_profiles_table.py
api_tests/: conftest.py  factories.py  test_auth.py  test_categories_api.py  test_products_api.py  test_tokens_api.py  test_users_api.py  utils.py
data/: populate_db_with_test_data.py
docs/: restaurant_app_erd.drawio
src/: app.py  settings.py
src/apis/: __init__.py  auth_dependencies.py  common_errors.py  constants.py  schemas.py  token_backend.py  utils.py
src/apis/admin/: __init__.py
src/apis/admin/categories/: api.py  schemas.py
src/apis/admin/products/: api.py  schemas.py
src/apis/admin/users/: api.py  schemas.py
src/apis/authentication/: api.py  schemas.py
src/apis/categories/: api.py
src/apis/products/: api.py
src/apis/services/: base.py  category_service.py  email_service.py  order_service.py  picture_saver.py  product_service.py  user_service.py
src/apis/users/: api.py  schemas.py
src/database/: db.py
src/database/models/: __init__.py  address.py  base.py  category.py  constants.py  employee_profile.py  order.py  order_item.py  product.py  types.py  user.py
src/templates/: _create_order_style.html  order_created.html  password_reset_email.html
